@@ -71,6 +71,14 @@ krb5_gss_inquire_names_for_mech(minor_status, mechanism, name_types)
 					     name_types)
 	      ) == GSS_S_COMPLETE) &&
 	    ((major = gss_add_oid_set_member(minor_status,
+					     (gss_OID) gss_nt_service_name_v2,
+					     name_types)
+	      ) == GSS_S_COMPLETE) &&
+	    ((major = gss_add_oid_set_member(minor_status,
+					     (gss_OID) gss_nt_exported_name,
+					     name_types)
+	      ) == GSS_S_COMPLETE) &&
+	    ((major = gss_add_oid_set_member(minor_status,
 					     (gss_OID) gss_nt_krb5_name,
 					     name_types)
 	      ) == GSS_S_COMPLETE)
